fixed text color not showing in system dark theme

--- a/src/App.css
+++ b/src/App.css
@@ -92,6 +92,6 @@
     display: inline-block;
     padding: 10px 15px;
     font-size: 20px;
-    color: #fff;
+    color: #353535;
   }
 }
